TestCases/Errors/Haversine/observations/sst/spr_07_obs.spm
obs r5-c13 0.008
obs r5-c14 0.0196684804703381
error_value r5-c13 0.2
error_value r5-c14 0.2
